Remove 'otherLabel' functionality
This supported the 'Presence' page in the org-viz UI but was broken. Guess we haven't used it
