# swagger.yaml
@@ -166,11 +166,6 @@ paths:
                 - false
               required: false
               default: true
-            - name: otherLabel
-              in: query
-              description: If set, returns a response for all repos, whether or not the technology is present, with the label being shown
-              type: string
-              required: false
             - name: trim
               in: query
               description: Trim outer ring (repositories). Only relevant if name=*
